--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>eshop desktop application</title>
+    <title>Restraunt Desktop</title>
     <link type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="./style/main.css">
@@ -12,7 +12,7 @@
     
     <div class="container">
         <div class="row">
-            <input type="button" value="print file" class="btn btn-primary" onclick="printFile()"></input>
+            <div ng-view></div>
         </div>
     </div>
     
@@ -20,9 +20,11 @@
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
   
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="src/app.js"></script>
     <script type="text/javascript" src="src/controllers/main.js"></script>
+    <script type="text/javascript" src="src/controllers/LatestOrderCtrl.js"></script>
     <script type="text/javascript" src="src/directives/menu.js"></script>
     <script type="text/javascript" src="src/services/menu.js"></script>
 
