--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     <script type="text/javascript" src="src/services/orders.js"></script>
     <script type="text/javascript" src="src/services/script.js"></script>
     <script type="text/javascript" src="src/services/api.js"></script>
+    <script type="text/javascript" src="src/services/timeService.js"></script>
   </body>
 </html>
