--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     <script type="text/javascript" src="src/services/script.js"></script>
     <script type="text/javascript" src="src/services/api.js"></script>
     <script type="text/javascript" src="src/services/timeService.js"></script>
+    <script type="text/javascript" src="src/services/sound.js"></script>
   </body>
 </html>
