--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-	<script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
-  	<script
+  <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
@@ -22,7 +17,10 @@
     <link rel="stylesheet" type="text/css" href="./style/main.css">
   </head>
   <body ng-app="eshop" ng-controller="main">
-    <notifications></notifications>    
+    <notifications></notifications>
+    
+    <menu></menu>    
+    
     <div class="container">
         <div class="row">
             <div ng-view></div>
