--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
     <script type="text/javascript" src="src/services/configs.js"></script>
     <script type="text/javascript" src="src/services/loaderService.js"></script>
     <script type="text/javascript" src="src/services/notificationCenter.js"></script>
+    <script type="text/javascript" src="src/services/print.js"></script>
   </body>
 </html>
